k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dreamops
  labels:
    name: dreamops
    environment: production
